2006-03-19 TADA Tadashi <sho@spc.gr.jp>
	* skel/show.rhtml, skel/i.show.rhtml: delete contents because these are
	dummy. thenks ZnZ.

2006-03-18 TADA Tadashi <sho@spc.gr.jp>
	* remove a limit of TSUKKOMI max (more).
	* plugin/00default.rb: add Mobile Link Discovery to HTML header.

2006-03-17 TADA Tadashi <sho@spc.gr.jp>
	* remove a limit of TSUKKOMI max.
	* move TSUKKOMI form from skel to plugin.

2006-02-10 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/default_io.rb: revive safety global lock.
	+ plugin/05referer.rb: change labels.

2006-02-06 TADA Tadashi <sho@spc.gr.jp>
	* revive @referer_day_only option but reverse default value.

2006-02-04 TADA Tadashi <sho@spc.gr.jp>
	* 01referer.rb: check existence of @referer_volatile in
	referer_of_today_long.
	* 01referer.rb: delete implement of referer_of_today_short.
	* theme/base.css: add p.message.

2006-02-03 TADA Tadashi <sho@spc.gr.jp>
	* large change about referer: daily management, volatile link, etc.
	* default_io.rb: ignore error when *.tdc was empty.

2006-01-02 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/defaultio.rb: ignore Errno::NOENT when delete empty file.

2005-12-09  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/convert2.rb: revise for current tdiary.rb.

2005-10-23 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary/filter/spam.rb, plugin/10spamfilter.rb, plugin/*/10spamfilter.rb:
	  add safe domain list at referer check.

2005-10-22 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary/filter/spam.rb: change uri regexp pattern in DNSBL filter.

2005-10-22 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary/filter/spam.rb: add debug messege and retry process in DNSBL filter.

2005-10-21 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/wiki_style.rb: fix enbuged on 2.1.3.20051020.

2005-10-21 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary/filter/spam.rb, plugin/10spamfilter.rb, plugin/*/10spamfilter.rb:
	  remove IP Blacklist filter. add two services to Domain Blacklist initialization.

2005-10-20 SHIBATA Hiroshi <h-sbt@nifty.com>